Finally fixed the weird spacing

--- a/docs/nasin-sitelen.css
+++ b/docs/nasin-sitelen.css
@@ -62,7 +62,7 @@ button:active {
 .linjaSitelen {
     margin-top: 8px;
     margin-bottom: 8px;
-    font-size: 2em;
+    font-size: 64px;
     animation-name: slideIn;
     animation-duration: 0.5s;
 }
@@ -92,7 +92,7 @@ a::selection {
 
 main {
     padding: 8px;
-    font-size: 1em;
+    font-size: 0;
 }
 
 footer {
@@ -115,8 +115,9 @@ textarea {
     box-sizing: border-box;
     height: 70px;
     width: 100%;
-    font-size: 2em;
+    font-size: 64px;
     font-family: linja-pona;
+    margin-bottom: 8px;
     border: 2px solid hsl(213, 9%, 30%);
     border-radius: 5px;
     background-color: hsl(213, 9%, 25%);
